--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/roseordonezrodriguez/xkcd
 BugReports: https://github.com/roseordonezrodriguez/xkcd/issues
+Imports: 
+    jsonlite
